--- a/www/html/home.html
+++ b/www/html/home.html
@@ -6,11 +6,11 @@
 	<div class="subcontent">
 		<p><a href="http://enviropages.ca" title="Enviropages Canada" target="_self">Enviropages Canada</a></p>
 		<p><a href="http://jbull.ca/flash/videoplayer" title="Flash AS3 Advanced Video Player" target="_self">Flash AS3 Advanced Video Player</a></p>
-		<p><a href="http://jbull.ca/php/cms" title="Custom PHP CMS" target="_self">Custom PHP CMS</a></p>
+		<p><a href="../php/cms" title="Custom PHP CMS" target="_self">Custom PHP CMS</a></p>
 		<p><a href="http://justinbull.wordpress.com" title="Technology and Art Blog" target="_self">Blog</a></p>
-		<p><a href="../flash/portfolio-07/index.html" title="Flash AS3 Portfolio" target="_self">2007 Portfolio</a></p>
-		<p><a href="../jbdesign/index.html" title="JB Design Studio" target="_self">JB Design Mock</a></p>
-		<p><a href="../flash/bcit/index.html" title="BCIT Project Management" target="_self">BCIT Project Management</a></p>
+		<p><a href="../flash/portfolio-07" title="Flash AS3 Portfolio" target="_self">2007 Portfolio</a></p>
+		<p><a href="../jbdesign" title="JB Design Studio" target="_self">JB Design Mock</a></p>
+		<p><a href="../flash/bcit" title="BCIT Project Management" target="_self">BCIT Project Management</a></p>
 	</div>
 	<div class="subfooter"></div>
 	<div class="break"></div>
